--- a/lesson12.html
+++ b/lesson12.html
@@ -1,80 +1,51 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Flexbox tut</title>
+        <title>Lesson 12</title>
     </head>
-    <body style="padding-bottom: 1000px;">
+    <body>
         <div style="
             display: flex;
-            flex-direction: row;
             ">
-            <div style="background-color: lightblue;">div 1</div>
-            <div style="background-color: lightpink;">div 2<p>text</p></div>
+            <div style="background-color: aqua;width: 200px;">200px</div>
+            <div style="background-color: burlywood; width: 75px;">75px</div>
         </div>
 
         <div style="
-            display: flex;
-            flex-direction: row;
-            margin-top: 30px;
-            ">
-            <div style="background-color: lightblue; width: 100px;">100px</div>
-            <div style="background-color: lightpink; flex: 1;">flex 1</div>
+        display: flex;
+        flex-direction: row;
+        margin-top: 30px;
+        ">
+        <div style="background-color: aqua; width: 50px;">item1</div>
+        <div style="background-color: lightpink; flex: 1;">item2</div>
+        <div style="background-color: aquamarine; width: 75px;">item3</div>
         </div>
 
         <div style="
-            display: flex;
-            flex-direction: row;
-            margin-top: 30px;
-            ">
-            <div style="background-color: lightblue; flex: 1;">flex 1</div>
-            <div style="background-color: lightpink; width: 100px;">100px</div>
-            <div style="background-color: lightblue; flex: 2;">flex 2</div>
+        display: flex;
+        flex-direction: row;
+        margin-top: 30px;
+        justify-content: space-evenly;
+        ">
+        <div style="background-color: yellowgreen;">item1</div>
+        <div style="background-color: orange;">item1</div>
+        <div style="background-color: yellowgreen;">item1</div>
+        <div style="background-color: orange;">item1</div>
         </div>
 
         <div style="
-            display: flex;
-            flex-direction: row;
-            margin-top: 30px;
-            height: 70px;
-            border-width: 1px;
-            border-style: solid;
-            border-color: gray;
-            justify-content: center;
-            ">
-            <div style="background-color: lightblue; width: 100px;;">flex 1</div>
-            <div style="background-color: lightpink; width: 100px;">100px</div>
-            <div style="background-color: lightblue; width: 100px;">flex 2</div>
-        </div>
-
-        <div style="
-            display: flex;
-            flex-direction: row;
-            margin-top: 30px;
-            height: 70px;
-            border-width: 1px;
-            border-style: solid;
-            border-color: gray;
-            justify-content: space-between;
-            ">
-            <div style="background-color: lightblue; width: 100px;;">flex 1</div>
-            <div style="background-color: lightpink; width: 100px;">100px</div>
-            <div style="background-color: lightblue; width: 100px;">flex 2</div>
-        </div>
-
-            <div style="
-            display: flex;
-            flex-direction: row;
-            margin-top: 30px;
-            height: 70px;
-            border-width: 1px;
-            border-style: solid;
-            border-color: gray;
-            justify-content: space-between;
-            align-items: center;
-            ">
-            <div style="background-color: lightblue; width: 100px;;">flex 1</div>
-            <div style="background-color: lightpink; width: 100px;">100px</div>
-            <div style="background-color: lightblue; width: 100px;">flex 2</div>
+        display: flex;
+        margin-top: 30px;
+        height: 50px;
+        border-width: 1px;
+        border-style: solid;
+        border-color: gray;
+        justify-content: space-between;
+        border-radius: 1px;
+        align-items: center;
+        ">
+        <div style="background-color: bisque;">item1</div>
+        <div style="background-color: bisque;">item2</div>
         </div>
     </body>
 </html>
